# sigfox-ep-lib

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  sigfox_ep_flags.h.in  sigfox_ep_flags_template.h
cmake/: addon_rfp.cmake  addon_ta.cmake  lr11xx_rf_api.cmake  manuf_rf_api.cmake  precompile.cmake  s2lp_rf_api.cmake  sx126x_rf_api.cmake
inc/: sigfox_ep_api.h  sigfox_ep_api_test.h  sigfox_ep_flags.h  sigfox_ep_lib_version.h  sigfox_ep_version.h  sigfox_error.h  sigfox_rc.h  sigfox_types.h
inc/core/: TI_aes_128_encr_only.h  sigfox_crc.h  sigfox_ep_bitstream.h  sigfox_ep_frequency.h  sigfox_tx_control.h
inc/manuf/: mcu_api.h  rf_api.h
src/: sigfox_ep_api.c  sigfox_error.c  sigfox_rc.c  sigfox_types.c
src/core/: TI_aes_128_encr_only.c  sigfox_crc.c  sigfox_ep_bitstream.c  sigfox_ep_frequency.c  sigfox_tx_control.c
src/manuf/: mcu_api.c  rf_api.c
